<resources>
    <string name="app_name">BRMM</string>
    <string name="big_red_marching_machine">Big Red Marching Machine</string>
    <string name="enter_ulid">ULID:</string>
    <string name="enter_password">Password:</string>
    <string name="title_activity_ui__main">UI_Main</string>
    <string name="filters">Filters</string>
    <string name="logout">Logout</string>
    <string name="checkout">Checkout</string>
    <string name="add">Add</string>
    <string name="edit_rentable">Edit Item</string>
    <string name="delete_section">Delete Section</string>
    <string name="add_section_lead">Section Lead</string>
    <string name="remove">Remove</string>
    <string name="edit_note">Edit Note</string>
    <string name="edit_member">Edit Member</string>
    <string name="last_name">Last Name:</string>
    <string name="first_name">First Name:</string>
    <string name="uid">UID:</string>
    <string name="section">Section:</string>
    <string name="checkout_status">Checkout Status:</string>
    <string name="bandmember_type">Bandmember Type:</string>
    <string name="section_leader">Section Leaders Only?</string>
    <string name="instrument_filter_label">Instrument:</string>
    <string name="student">Student</string>
    <string name="teacher">Teacher</string>
    <string name="student_login">Student Login</string>
    <string name="has_instrument">has instrument</string>
    <string name="has_no_instrument">has no instrument</string>
    <string name="instrument_filters">Instrument Filters</string>
    <string name="apply">Apply</string>
    <string name="bandmember_filters">Bandmember Filters</string>
    <string name="part_filters">Part Filters</string>
    <string name="name">Name:</string>
    <string name="cost">Cost:</string>
    <string name="id_number">ID number:</string>
    <string name="owner">Owner:</string>
    <string name="add_section">Add Section</string>
    <string name="save">Save</string>
    <string name="color_filter">color filter</string>
    <string name="notes">Notes:</string>
    <string name="department">Department:</string>
    <string name="role">Role:</string>
    <string name="serial_number">Serial number:</string>
    <string name="compatible_with">Compatible with:</string>
    <string name="categories">Categories:</string>
    <string name="add_existing">Add existing</string>
    <string name="isulogo">isuLogo</string>
    <string name="no">No</string>
    <string name="add_instrument">Add Instrument</string>
    <string name="add_member">Add Member</string>
    <string name="member_type">Member type:</string>
    <string name="faculty">Faculty</string>
    <string name="edit_part">Edit Part</string>
    <string name="add_part">Add Part</string>
    <string name="edit_instrument">Edit Instrument</string>
    <string name="add_category">Add Category</string>
    <string name="instrument">Instrument</string>
    <string name="instrumentcolon">Instrument:</string>
    <string name="set_section_lead">Set Section Lead</string>
    <string name="member">Member:</string>
    <string name="set_lead">Set Lead</string>
    <string name="done">Done</string>
    <string name="pick_one">Pick one</string>
    <string name="delete_part">Delete Part</string>
    <string name="delete_member">Delete Member</string>
    <string name="delete_instrument">Delete Instrument</string>
    <string name="delete_category">Delete Category</string>
    <string name="ulid">ULID:</string>
    <string name="login">Login</string>
    <string name="part">Part</string>
    <string name="remove_lead">Remove Lead</string>
    <string name="check_in">Check In</string>


    <string-array name="Entries">
        <item>Parts</item>
        <item>Instruments</item>
        <item>Band Members</item>
    </string-array>
</resources>