<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CE1126"
    tools:context=".InstrumentFilters">

    <TextView
        android:id="@+id/first_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/first_name"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/last_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_name"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="196dp"
        tools:layout_editor_absoluteY="8dp" />

    <TextView
        android:id="@+id/UID_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uid"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="196dp"
        tools:layout_editor_absoluteY="99dp" />

    <TextView
        android:id="@+id/section_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/section"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="17dp"
        tools:layout_editor_absoluteY="293dp" />

    <TextView
        android:id="@+id/checkout_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkout_status"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="207dp"
        tools:layout_editor_absoluteY="187dp" />

    <TextView
        android:id="@+id/bandmember_type_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bandmember_type"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="99dp" />

    <TextView
        android:id="@+id/leads_section_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/section_leader"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="215dp"
        tools:layout_editor_absoluteY="288dp" />

    <TextView
        android:id="@+id/instrument_filter_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instrument_filter_label"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="17dp"
        tools:layout_editor_absoluteY="187dp" />

    <EditText
        android:id="@+id/first_name_filter_edittext"
        android:layout_width="128dp"
        android:layout_height="37dp"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="40dp"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="196dp"
        tools:layout_editor_absoluteY="32dp"
        android:importantForAutofill="no" />

    <RadioGroup
        android:layout_width="117dp"
        android:layout_height="66dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="123dp">

        <RadioButton
            android:id="@+id/student_RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student" />

        <RadioButton
            android:id="@+id/teacher_RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/teacher" />
    </RadioGroup>

    <EditText
        android:id="@+id/UID_Edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        tools:layout_editor_absoluteX="196dp"
        tools:layout_editor_absoluteY="123dp" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="179dp"
        android:layout_height="0dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="211dp" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="CheckBox"
        tools:layout_editor_absoluteX="207dp"
        tools:layout_editor_absoluteY="211dp" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="CheckBox"
        tools:layout_editor_absoluteX="207dp"
        tools:layout_editor_absoluteY="243dp" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="184dp"
        android:layout_height="37dp"
        tools:layout_editor_absoluteX="11dp"
        tools:layout_editor_absoluteY="329dp" />

</android.support.constraint.ConstraintLayout>