<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/part_grid_rv_layout"
    android:layout_width="match_parent"
    android:layout_height="45dp"
    android:layout_centerInParent="false"
    android:layout_centerVertical="false"
    android:clickable="true"
    android:columnCount="3"
    android:focusable="true"
    android:rowCount="2"
    app:layout_insetEdge="bottom">

    <TextView
        android:id="@+id/name_ins_rv_textview"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_gravity="fill_horizontal"
        android:text="@string/name"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark" />

    <TextView
        android:id="@+id/id_ins_rv_textview"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="1"
        android:text="@string/id_number"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark" />

    <TextView
        android:id="@+id/section_ins_rv_textview"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"
        android:text="@string/section"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark" />

    <TextView
        android:id="@+id/cost_ins_rv_textview"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:text="@string/cost"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark" />

    <TextView
        android:id="@+id/owner_ins_rv_textview"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="2"
        android:text="@string/owner"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@android:color/background_dark"
        android:textSize="14sp" />


</GridLayout>