<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/part_grid_rv_layout"
    android:layout_width="match_parent"
    android:layout_height="30dp"
    android:layout_centerInParent="false"
    android:layout_centerVertical="false"
    android:columnCount="3"
    android:paddingTop="0dp"
    android:paddingBottom="0dp"
    android:rowCount="1"
    app:layout_insetEdge="bottom">

    <TextView
        android:id="@+id/name_part_rv_textview"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_gravity="fill_horizontal"
        android:text="@string/name"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/cost_part_rv_textview"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="1"
        android:text="@string/cost"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/sn_part_rv_textview"
        android:layout_width="198dp"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="2"
        android:text="@string/serial_number"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textStyle="bold" />


</GridLayout>