<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CE1126"
    tools:context=".set_lead">


    <ImageView
        android:id="@+id/colorfilter_add_member"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#40EEE8E8"
        android:contentDescription="@string/color_filter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/set_lead_header"
        android:layout_width="378dp"
        android:layout_height="59dp"
        android:layout_marginTop="40dp"
        android:text="@string/set_section_lead"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/section_set_lead_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/section"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/set_lead_header"
        app:layout_constraintStart_toStartOf="@+id/set_lead_header"
        app:layout_constraintTop_toBottomOf="@+id/set_lead_header" />

    <TextView
        android:id="@+id/member_set_lead_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/member"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/section_set_lead_dropdown"
        app:layout_constraintStart_toStartOf="@+id/section_set_lead_dropdown"
        app:layout_constraintTop_toBottomOf="@+id/section_set_lead_dropdown" />

    <Spinner
        android:id="@+id/section_set_lead_dropdown"
        android:layout_width="175dp"
        android:layout_height="40dp"
        android:background="@drawable/spinner_background"
        app:layout_constraintEnd_toEndOf="@+id/section_set_lead_textview"
        app:layout_constraintStart_toStartOf="@+id/section_set_lead_textview"
        app:layout_constraintTop_toBottomOf="@+id/section_set_lead_textview" />

    <Spinner
        android:id="@+id/member_set_lead_dropdown"
        android:layout_width="175dp"
        android:layout_height="40dp"
        android:background="@drawable/spinner_background"
        app:layout_constraintEnd_toEndOf="@+id/member_set_lead_textview"
        app:layout_constraintStart_toStartOf="@+id/member_set_lead_textview"
        app:layout_constraintTop_toBottomOf="@+id/member_set_lead_textview" />

    <Button
        android:id="@+id/set_lead_set_lead_button"
        android:layout_width="125dp"
        android:layout_height="40dp"
        android:layout_marginTop="116dp"
        android:background="@drawable/button_border"
        android:text="@string/set_lead"
        android:textAllCaps="false"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/section_set_lead_textview"
        app:layout_constraintTop_toBottomOf="@+id/member_set_lead_dropdown" />

    <TextView
        android:id="@+id/current_set_lead_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/done"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/member_set_lead_dropdown"
        app:layout_constraintStart_toStartOf="@+id/member_set_lead_dropdown"
        app:layout_constraintTop_toBottomOf="@+id/member_set_lead_dropdown" />

    <Button
        android:id="@+id/cancel_set_lead_button"
        android:layout_width="125dp"
        android:layout_height="40dp"
        android:background="@drawable/button_border"
        android:text="@android:string/cancel"
        android:textAllCaps="false"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/member_set_lead_textview"
        app:layout_constraintTop_toTopOf="@+id/set_lead_set_lead_button" />

    <Button
        android:id="@+id/delete_set_lead_button"
        android:layout_width="125dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_border"
        android:text="@string/remove_lead"
        android:textAllCaps="false"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/set_lead_set_lead_button"
        app:layout_constraintStart_toStartOf="@+id/set_lead_set_lead_button"
        app:layout_constraintTop_toBottomOf="@+id/set_lead_set_lead_button" />

</android.support.constraint.ConstraintLayout>